# snark-verifier

./: .gitignore  Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1az46knj1bjqcyffhb01cm03b3cqsvnn-source  cabr919sdv2i8sld6cq78wjrqjlgpw6n-source  fz1v441dz2ck552f9bzc11j1yri0jdgb-source
snark-verifier/src/loader/halo2/: shim.rs
