[workspace]
members = [
    "snark-verifier",
    "snark-verifier-sdk",
]

[profile.dev]
opt-level = 3

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = true
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat" 
# codegen-units = 1
panic = "abort"
incremental = true

# For performance profiling
[profile.flamegraph]
inherits = "release"
debug = true

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "scroll-dev-0220" }
[patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "0.3.1-derive-serde" }

[patch."https://github.com/scroll-tech/halo2-lib"]
# halo2-base = { path = "../halo2-lib/halo2-base" }
# halo2-ecc = { path = "../halo2-lib/halo2-ecc" }

halo2-base = { git = "https://github.com/cameron1024/halo2-lib", branch = "main" }
halo2-ecc = { git = "https://github.com/cameron1024/halo2-lib", branch = "main" }

[patch."https://github.com/scroll-tech/poseidon-circuit.git"]
# poseidon-circuit = { path = "../poseidon-circuit" }
poseidon-circuit = { git = "https://github.com/cameron1024/poseidon-circuit", branch = "main" }
